Changes in 0.80.2:
  o Client Changes:
    * Fix bugs in conary update foo=<old>--<new> behavior
    * cvc co foo=<label> will now work even if you don't have a buildLabel set
    * conary scs will now work more nicely with group changesets
    * conary scs --all no longer shows ids and sha1s
    * We now never erase pinned items until they are explicity unpinned.
  o Build Changes:
    * It is now possible for a recipe to request that specific individual
      requirements be removed from files (it used to be all or nothing)
      using the exceptDeps keyword argument to r.Requires().
    * r.Replace now takes a lines=<regexp> argument, to match a line based
      on a regexp
    * Added the EnforceJavaBuildRequirements policy.  When you are
      packaging precompiled Java software where you have .class/.jar files
      but no .java files, you can use "del EnforceJavaBuildRequirements".
    * Added the EnforceCILBuildRequirements policy.
    * Enforce*BuildRequirements now warn when a package has requirements
      which they don't fulfill themselves and which are not fulfilled by
      the system database (for example, soname dependencies from linking
      against libraries not packaged by Conary).
    * Added Perl dependencies, both provides and requires.  They are not
      yet enforced, in order to give time to adapt while perl packages are
      being re-built.
    * Added the EnforcePerlBuildRequirements policy.  Failures found by
      this policy may be caused by packages on the system not having been
      rebuilt yet with Perl dependencies, but may also show bugs in the
      Perl dependency code.
    * Added Python dependencies, both provides and requires.  Like Perl
      dependencies, they are not yet enforced.
    * Added the EnforcePythonBuildRequirements policy, with the same
      caveats as EnforcePerlBuildRequirements.
    * Log more information about the build environment when cooking

Changes in 0.80.1:
  o Client Changes: